[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Cibersegurança/OQueÉCybersegurança.gd" type="Script" id=1]
[ext_resource path="res://Assets/Imagens/seguranca.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/no_texture.png" type="Texture" id=3]
[ext_resource path="res://Shaders/VHS_CRT.gdshader" type="Shader" id=4]
[ext_resource path="res://Scenes/Font/text.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Music/HoliznaCC0 - Track 1.mp3" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Font/Title.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Imagens/AETERUS.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Font/Title2.tres" type="DynamicFont" id=9]

[sub_resource type="Animation" id=3]
resource_name = "Primeira"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Woman:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0.00530028, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Segunda"
length = 25.0
tracks/0/type = "value"
tracks/0/path = NodePath("Woman:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1350, -123 ), Vector2( -1150, -123 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Terceira"
tracks/0/type = "value"
tracks/0/path = NodePath("Label4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/overlay = true
shader_param/scanlines_opacity = 0.1
shader_param/scanlines_width = 0.25
shader_param/grille_opacity = 0.1
shader_param/resolution = Vector2( 1080, 1920 )
shader_param/pixelate = true
shader_param/roll = true
shader_param/roll_speed = -2.0
shader_param/roll_size = 20.0
shader_param/roll_variation = 1.4
shader_param/distort_intensity = 0.02
shader_param/noise_opacity = 0.4
shader_param/noise_speed = 1.0
shader_param/static_noise_intensity = 0.1
shader_param/aberration = 0.01
shader_param/brightness = 1.0
shader_param/discolor = true
shader_param/warp_amount = 0.01
shader_param/clip_warp = false
shader_param/vignette_intensity = 0.8
shader_param/vignette_opacity = 0.25

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Primeira = SubResource( 3 )
anims/Segunda = SubResource( 4 )
anims/Terceira = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0.00530028, 1 )

[node name="Woman" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )
margin_left = -1350.0
margin_top = -123.0
margin_right = 4122.0
margin_bottom = 3525.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="Label1" type="Label" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
custom_colors/font_color = Color( 0.705882, 1, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Você sabe o que é
Segurança da Informação?"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -508.0
margin_top = -568.0
margin_right = 501.0
margin_bottom = -370.0
custom_colors/font_color = Color( 0.705882, 1, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "
"
valign = 1
autowrap = true

[node name="Label3" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.5
margin_top = 160.0
margin_right = 497.5
margin_bottom = 358.0
custom_colors/font_color = Color( 0.705882, 1, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "
"
align = 2
valign = 1
autowrap = true

[node name="Label4" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.5
margin_top = 518.0
margin_right = 497.5
margin_bottom = 716.0
custom_colors/font_color = Color( 0.705882, 1, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "ISSO É SEGURANÇA DA INFORMAÇÃO!"
align = 1
valign = 1
autowrap = true

[node name="Ending" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 249.0
margin_top = 590.0
margin_right = -249.0
margin_bottom = -590.0
alignment = 1

[node name="LOGO" type="TextureRect" parent="Ending"]
margin_right = 582.0
margin_bottom = 608.0
size_flags_vertical = 3
texture = ExtResource( 8 )
stretch_mode = 6

[node name="Label5" type="Label" parent="Ending"]
margin_top = 612.0
margin_right = 582.0
margin_bottom = 740.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 9 )
align = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="write_timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="write_timer" to="." method="_on_write_timer_timeout"]
